installs and configures Tailwind CSS for use

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,9 @@
-{{page-title "TailwindExample"}}
+{{page-title "Tailwind Example"}}
 
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
+<header class="container mx-auto">
+  <h1 class="font-mono">Hello Tailwind</h1>
+</header>
 
-{{outlet}}
+<main>
+    {{outlet}}
+</main>
